@@ -989,3 +989,7 @@
 
         * GLview supports "language,changed" smart callback.
 
+2013-02-13  ChunEon Park (Hermet)
+
+        * Ctxpopup will be dismissed when elm language is changed.
+
